force-app/main/default/objects/BrillioFC__Custom_Metadata__c/BrillioFC__Custom_Metadata__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Custom Metadata</label>
    <nameField>
        <label>Custom Metadata Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Custom Metadatas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>