force-app/main/default/objects/BrillioFC__Custom_Metadata__c/fields/BrillioFC__Full_API_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Full_API_Name__c</fullName>
    <label>Full API Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>