force-app/main/default/objects/BrillioFC__Custom_Metadata__c/fields/BrillioFC__Org_Detail__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Org_Detail__c</fullName>
    <label>ForceClinic Org Detail</label>
    <referenceTo>BrillioFC__Org_Details__c</referenceTo>
    <relationshipLabel>ForceClinic Custom Metadatas</relationshipLabel>
    <relationshipName>ForceClinic_Custom_Metadatas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>